# pyrelist

./: README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
doc/: DONE.txt  TODO.txt  sample_weighted.py.doc
pyreg/: configs.py  main.py  static.py  utils.py
pyrelist/: configs.py  main.py  python.py  static.py
src/pyrelist/: configs.py  main.py  static.py
