[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrelist"
version = "0.0.5"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "Pyrelist helps you match a file against multiple regex patterns"
readme = "README.md"
license = "MIT"
keywords=[
    "regexp",
    "lint",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pylogconf",
    "pytconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyrelist"
"Bug Tracker" = "https://github.com/veltzer/pyrelist/issues"
"Documentation" = "https://veltzer.github.io/pyrelist"
"Download" = "https://pypi.org/project/pyrelist/"
"Repository" = "https://github.com/veltzer/pyrelist"

[project.scripts]
pyrelist = "pyrelist.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyrelist"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyrelist/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
